# Dogs_Shelter

./: CMakeLists.txt  README.md  dogs.csv  dogs.html  dogs.txt  dogs10.txt  example.html  main.cpp  mainQt.cpp
Business/: ServiceAdmin.cpp  ServiceAdmin.h  ServiceUser.cpp  ServiceUser.h  UndoRedo.cpp  UndoRedo.h
Domain/: Dog.cpp  Dog.h
Exceptions/: RepositoryException.cpp  RepositoryException.h  ServiceException.cpp  ServiceException.h  ValidationException.cpp  ValidationException.h
Persistence/: CsvRepository.cpp  CsvRepository.h  FileRepository.cpp  FileRepository.h  HtmlRepository.cpp  HtmlRepository.h  Repository.cpp  Repository.h
Presentation/: Console.cpp  Console.h  ModelView.cpp  ModelView.h  QtGui.cpp  QtGui.h
Tests/: Tests.cpp  Tests.h  TestsDomain.cpp  TestsDomain.h  TestsRepository.cpp  TestsRepository.h  TestsService.cpp  TestsService.h  TestsValidation.cpp  TestsValidation.h
Validation/: DogValidator.cpp  DogValidator.h
